monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4090/A4090c.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4090;

grammar A4090c extends de.monticore.common.TestTypes {

  A = "Tom";
  B = (who:["Tom"] | who:A)*;

}
